--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,12 +45,14 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.3.0'
+    compile 'com.squareup.okhttp3:okhttp:3.8.0'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.8.0'
     //Rx adapter for retrofit
     compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
     // Rx
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     provided 'javax.annotation:jsr250-api:1.0'
+    compile 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
     // Because RxAndroid releases are few and far between, it is recommended you also
     // explicitly depend on RxJava's latest version for bug fixes and new features.
     compile 'io.reactivex.rxjava2:rxjava:2.1.5'
@@ -61,6 +63,8 @@ dependencies {
     annotationProcessor 'com.google.dagger:dagger-compiler:2.12'
     // Adapter
     compile 'io.nlopez.smartadapters:library:1.3.1'
+    // UI
+    compile 'com.roughike:bottom-bar:2.3.1'
     // Android
     compile 'com.android.support:appcompat-v7:26.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
