--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.rizaldev.debtcollector">
-
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <application
         android:name=".application.AppController"
         android:allowBackup="true"
@@ -15,10 +16,14 @@
             android:theme="@style/AppThemeNoActionBar" />
         <activity
             android:name=".screens.register.RegisterActivity"
-            android:theme="@style/AppThemeNoActionBar" />
+            android:theme="@style/AppThemeNoActionBar" >
+
+        </activity>
         <activity
             android:name=".screens.register.BiodataActivity"
-            android:theme="@style/AppThemeNoActionBar" />
+            android:theme="@style/AppThemeNoActionBar" >
+
+        </activity>
         <activity
             android:name=".screens.splash.SplashActivity"
             android:theme="@style/AppThemeNoActionBar">
